# devit

./: .gitignore  .panproject.toml  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  test-config.toml
.github/workflows/: release.yml
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
packaging/arch/: .SRCINFO  PKGBUILD
src/: blueprint.rs  config.rs  dashboard.rs  git.rs  info.rs  main.rs  registry.rs
test-repo/auth-service/: deployment.yaml
