[package]
name = "davit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
console = "0.16.2"
crossterm = "0.29.0"
directories = "6.0.0"
futures = "0.3.31"
inquire = "0.9.3"
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
kube = { version = "3.0.1", features = ["runtime", "derive", "client"] }
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
