[package]
name = "davit"
version = "0.2.0"
edition = "2024"
description = "Kubernetes management utilities"
license = "MIT"
repository = "https://github.com/dghilardi/devit"
homepage = "https://github.com/dghilardi/devit"
keywords = ["kubernetes", "k8s", "cli", "deployment", "management"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
console = "0.16.2"
crossterm = "0.29.0"
directories = "6.0.0"
futures = "0.3.31"
inquire = "0.9.3"
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
kube = { version = "3.0.1", features = ["runtime", "derive", "client"] }
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
walkdir = "2.5"
similar = "2.7.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
pathdiff = "0.2.3"

[dev-dependencies]
tempfile = "3.17.1"
